--- a/news.html
+++ b/news.html
@@ -89,12 +89,7 @@
                     <h5>kenapa bisa muncul gowa family?
                     <span class="date">29 september, 2022</span></h5>
                     <center><img src="3 lanscape.jpg" alt="photo" class="photo-news"/></center>
-                    <p> sebenernya awalnya gaada acuan untuk menjadikan gowa sebagai nama group, mungkin awal dari nama gowa karna sebuah candaan yang
-                        trus di jadikan ide nama group sampai saat ini, fun fact candaannya itu karena kita tau semua anak dari dari group ini adalah
-                        anak jurusan IT tapi mungkin setiap anak dari kita memiliki kekurangan masing-masing dalam hal komputer, kaya aneh bukan anak IT
-                        tapi ga bisa IT, tapi itukan baru semester-semester awal, jadi harap di maklumkan lah, so dari situ bisa di simpulkan nama gowa berasal. 
-                        gowa memiliki 15 anak didalamnya yang masing-masing dari kami meyakini bahwa setiap individu 
-                        memiliki kelebihan yang luar biasa yang ga setiap dari kami memilikinya. 
+                    <p> saya valiant goks
                     </p>  
                         
                     <p>
