--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Patsy Doherty - About</title>
+        <p>Hello, udah diganti nih</p>
 
         <meta charset="utf-8">
         <meta name="description" content="">
